--- a/index.html
+++ b/index.html
@@ -2,12 +2,10 @@
 layout: default
 title: Home
 lang: en
+identifier: home
 ---
 
-<h1>Lanugages</h1>
-{% for l in site.portals['main'] %}
-  <a href="{{ l.url }}">{{ site.t[l.lang].language }}</a>
-{% endfor %}
+{% include portal-language-switcher.html %}
 
 {% for post in site.collections %}
 <div class="guides card">
