working on portal card

--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ identifier: home
       <div class="card decoration">
         <i class="fa fa-users"></i>
       </div>
+      <div class="card description">
+        <p>Essential features available to normal users in a community hosted on Discourse.</p>
+      </div>
       <ul class="sub portal list">
         <li class="sub portal link">
           <a href="{{ site.baseurl }}/users/setup" class="install sub portal">1</a>
