add portal layout and extract header from layouts

--- a/moderators.html
+++ b/moderators.html
@@ -1,9 +1,8 @@
 ---
-layout: portal
+layout: default
 lang: en
-section: designers
+section: moderators
 subsections:
-  - tweaks
 ---
 
 {% include doclist.html %}
