--- a/users.html
+++ b/users.html
@@ -1,9 +1,8 @@
 ---
-layout: portal
+layout: default
 lang: en
-section: designers
+section: users
 subsections:
-  - tweaks
 ---
 
 {% include doclist.html %}
