--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@ identifier: home
     </div>
     <ul class="card actions">
       <li class="card action">
-        <a href="{{ site.baseurl }}/users/trust-levels"><i class="fa fa-file-o"></i>Trust Levels</a>
+        <a href="{{ site.baseurl }}/trust-levels"><i class="fa fa-file-o"></i>Trust Levels</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/users/badges"><i class="fa fa-file-o"></i>Badges</a>
+        <a href="{{ site.baseurl }}/badges"><i class="fa fa-file-o"></i>Badges</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/users/linked-posts"><i class="fa fa-file-o"></i>Linked Posts</a>
+        <a href="{{ site.baseurl }}/linked-posts"><i class="fa fa-file-o"></i>Linked Posts</a>
       </li>
       <li class="card action">
         <a href="{{ site.baseurl }}/users"><i class="fa fa-angle-right"></i>More</a>
@@ -40,13 +40,13 @@ identifier: home
     </div>
     <ul class="card actions">
       <li class="card action">
-        <a href="{{ site.baseurl }}/moderators/flag-queue"><i class="fa fa-file-o"></i>Flag Queue</a>
+        <a href="{{ site.baseurl }}/flag-queue"><i class="fa fa-file-o"></i>Flag Queue</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/moderators/splitting-topics"><i class="fa fa-file-o"></i>Splitting Topics</a>
+        <a href="{{ site.baseurl }}/splitting-topics"><i class="fa fa-file-o"></i>Splitting Topics</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/moderators/pinning-topics"><i class="fa fa-file-o"></i>Pinning Topics</a>
+        <a href="{{ site.baseurl }}/pinning-topics"><i class="fa fa-file-o"></i>Pinning Topics</a>
       </li>
       <li class="card action">
         <a href="{{ site.baseurl }}/moderators"><i class="fa fa-angle-right"></i>More</a>
@@ -63,13 +63,13 @@ identifier: home
     </div>
     <ul class="card actions">
       <li class="card action">
-        <a href="{{ site.baseurl }}/administrators/configure-automatic-backups-for-discourse"><i class="fa fa-file-o"></i>Configure automatic backups for Discourse</a>
+        <a href="{{ site.baseurl }}/configure-automatic-backups-for-discourse"><i class="fa fa-file-o"></i>Configure automatic backups for Discourse</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/administrators/configure-your-domain-name-for-hosted-discourse"><i class="fa fa-file-o"></i>Configure your domain name for hosted Discourse</a>
+        <a href="{{ site.baseurl }}/configure-your-domain-name-for-hosted-discourse"><i class="fa fa-file-o"></i>Configure your domain name for hosted Discourse</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/administrators/configuring-google-oauth2-login-for-discourse"><i class="fa fa-file-o"></i>Configuring Google OAuth2 login for Discourse</a>
+        <a href="{{ site.baseurl }}/configuring-google-oauth2-login-for-discourse"><i class="fa fa-file-o"></i>Configuring Google OAuth2 login for Discourse</a>
       </li>
       <li class="card action">
         <a href="{{ site.baseurl }}/administrators"><i class="fa fa-angle-right"></i>More</a>
@@ -86,13 +86,13 @@ identifier: home
     </div>
     <ul class="card actions">
       <li class="card action">
-        <a href="{{ site.baseurl }}/designers/TBD"><i class="fa fa-file-o"></i>Adding a menu item to the hamburger menu</a>
+        <a href="{{ site.baseurl }}/TBD"><i class="fa fa-file-o"></i>Adding a menu item to the hamburger menu</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/designers/custom-nav-header-like-discourseorg"><i class="fa fa-file-o"></i>Custom nav header like on Discourse.org</a>
+        <a href="{{ site.baseurl }}/custom-nav-header-like-discourseorg"><i class="fa fa-file-o"></i>Custom nav header like on Discourse.org</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/designers/TBD"><i class="fa fa-file-o"></i>Customising the topics index</a>
+        <a href="{{ site.baseurl }}/TBD"><i class="fa fa-file-o"></i>Customising the topics index</a>
       </li>
       <li class="card action">
         <a href="{{ site.baseurl }}/designers"><i class="fa fa-angle-right"></i>More</a>
@@ -109,13 +109,13 @@ identifier: home
     </div>
     <ul class="card actions">
       <li class="card action">
-        <a href="{{ site.baseurl }}/sysadmins/install-discourse"><i class="fa fa-file-o"></i>How Do I Install Discourse?</a>
+        <a href="{{ site.baseurl }}/install-discourse"><i class="fa fa-file-o"></i>How Do I Install Discourse?</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/sysadmins/install-a-plugin"><i class="fa fa-file-o"></i>Install a Plugin</a>
+        <a href="{{ site.baseurl }}/install-a-plugin"><i class="fa fa-file-o"></i>Install a Plugin</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/sysadmins/enable-a-cdn-for-your-discourse"><i class="fa fa-file-o"></i>Enable a CDN for your Discourse</a>
+        <a href="{{ site.baseurl }}/enable-a-cdn-for-your-discourse"><i class="fa fa-file-o"></i>Enable a CDN for your Discourse</a>
       </li>
       <li class="card action">
         <a href="{{ site.baseurl }}/sysadmins"><i class="fa fa-angle-right"></i>More</a>
@@ -132,13 +132,13 @@ identifier: home
     </div>
     <ul class="card actions">
       <li class="card action">
-        <a href="{{ site.baseurl }}/developers/a-simple-discourse-plugin"><i class="fa fa-file-o"></i>A Simple Discourse Plugin</a>
+        <a href="{{ site.baseurl }}/a-simple-discourse-plugin"><i class="fa fa-file-o"></i>A Simple Discourse Plugin</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/developers/using-discourse-api"><i class="fa fa-file-o"></i>Using Discourse API</a>
+        <a href="{{ site.baseurl }}/using-discourse-api"><i class="fa fa-file-o"></i>Using Discourse API</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/developers/discourse-developer-install-guide-vagrant"><i class="fa fa-file-o"></i>Discourse Developer Install Guide</a>
+        <a href="{{ site.baseurl }}/discourse-developer-install-guide-vagrant"><i class="fa fa-file-o"></i>Discourse Developer Install Guide</a>
       </li>
       <li class="card action">
         <a href="{{ site.baseurl }}/developers"><i class="fa fa-angle-right"></i>More</a>
