New docs, updated sidebar, updated index
More updates pending for the index. Several broken pages there.

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ identifier: home
     </div>
     <ul class="card actions">
       <li class="card action">
-        <a href="{{ site.baseurl }}/install-discourse"><i class="fa fa-file-o"></i>How Do I Install Discourse?</a>
+        <a href="{{ site.baseurl }}/install"><i class="fa fa-file-o"></i>How Do I Install Discourse?</a>
       </li>
       <li class="card action">
         <a href="{{ site.baseurl }}/install-a-plugin"><i class="fa fa-file-o"></i>Install a Plugin</a>
