adjust main page styles

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@ section: home
 lang: en
 ---
 
+<p>This documentation portal attempts to catalogue every important tidbit of information about Discourse that can stand the test of time. We've categorised the overarching categories of interest for your reading pleasure.</p>
+<p>Tip: Want to comment on an article? Maybe suggest an edit? By all means! Just follow the "Source link up top.
+
 <div class="portal list">
   <div class="parent portal users card">
-    <a class="card title" href="{{ site.baseurl }}/users">Users</a>
-    <div class="card decoration">
+    <a class="card header" href="{{ site.baseurl }}/users">
       <i class="fa fa-users"></i>
-    </div>
+      Users
+    </a>
     <div class="card description">
       Essential features available to normal users in a community hosted on Discourse.
     </div>
@@ -28,11 +31,12 @@ lang: en
       </li>
     </ul>
   </div>
+
   <div class="parent portal moderators card">
-    <a class="card title" href="{{ site.baseurl }}/moderators">Moderators</a>
-    <div class="card decoration">
+    <a class="card header" href="{{ site.baseurl }}/moderators">
       <i class="fa fa-shield"></i>
-    </div>
+      Moderators
+    </a>
     <div class="card description">
       How to use various features for community and forum moderation.
     </div>
@@ -52,10 +56,10 @@ lang: en
     </ul>
   </div>
   <div class="parent portal administrators card">
-    <a class="card title" href="{{ site.baseurl }}/administrators">Administrators</a>
-    <div class="card decoration">
+    <a class="card header" href="{{ site.baseurl }}/administrators">
       <i class="fa fa-trophy"></i>
-    </div>
+      Administrators
+    </a>
     <div class="card description">
       How to configuration of various site-wide options for discourse through the admin panel.
     </div>
@@ -75,10 +79,10 @@ lang: en
     </ul>
   </div>
   <div class="parent portal designers card">
-    <a class="card title" href="{{ site.baseurl }}/designers">Designers</a>
-    <div class="card decoration">
+    <a class="card header" href="{{ site.baseurl }}/designers">
       <i class="fa fa-desktop"></i>
-    </div>
+      Designers
+    </a>
     <div class="card description">
       How to customize the look and feel of discourse with themes, HTML, CSS and JavaScript.
     </div>
@@ -98,10 +102,10 @@ lang: en
     </ul>
   </div>
   <div class="parent portal sysadmins card">
-    <a class="card title" href="{{ site.baseurl }}/sysadmins">System Administrators</a>
-    <div class="card decoration">
+    <a class="card header" href="{{ site.baseurl }}/sysadmins">
       <i class="fa fa-cog"></i>
-    </div>
+      System Administrators
+    </a>
     <div class="card description">
       How to install, maintain and optimize systems to run Discourse.
     </div>
@@ -121,10 +125,10 @@ lang: en
     </ul>
   </div>
   <div class="parent portal developers card">
-    <a class="card title" href="{{ site.baseurl }}/developers">Developers</a>
-    <div class="card decoration">
+    <a class="card header" href="{{ site.baseurl }}/developers">
       <i class="fa fa-code"></i>
-    </div>
+      Developers
+    </a>
     <div class="card description">
       Write plugins, features or fix bugs in Discourse.
     </div>
