More responsive cards

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ lang: en
 <p>Tip: Want to comment on an article? Maybe suggest an edit? By all means! Just follow the "Source link up top.
 
 <div class="portal list">
-  <div class="parent portal users card">
+  <div class="parent portal users card card-small-1 card-medium-2 card-full-3">
     <a class="card header" href="{{ site.baseurl }}/users">
       <i class="fa fa-users"></i>
       Users
@@ -29,7 +29,7 @@ lang: en
     </ul>
   </div>
 
-  <div class="parent portal moderators card">
+  <div class="parent portal moderators card card-small-1 card-medium-2 card-full-3">
     <a class="card header" href="{{ site.baseurl }}/moderators">
       <i class="fa fa-shield"></i>
       Moderators
@@ -49,7 +49,7 @@ lang: en
       </li>
     </ul>
   </div>
-  <div class="parent portal administrators card">
+  <div class="parent portal administrators card card-small-1 card-medium-2 card-full-3">
     <a class="card header" href="{{ site.baseurl }}/administrators">
       <i class="fa fa-trophy"></i>
       Administrators
@@ -69,7 +69,7 @@ lang: en
       </li>
     </ul>
   </div>
-  <div class="parent portal designers card">
+  <div class="parent portal designers card card-small-1 card-medium-2 card-full-3">
     <a class="card header" href="{{ site.baseurl }}/designers">
       <i class="fa fa-desktop"></i>
       Designers
@@ -89,7 +89,7 @@ lang: en
       </li>
     </ul>
   </div>
-  <div class="parent portal sysadmins card">
+  <div class="parent portal sysadmins card card-small-1 card-medium-2 card-full-3">
     <a class="card header" href="{{ site.baseurl }}/sysadmins">
       <i class="fa fa-cog"></i>
       System Administrators
@@ -109,7 +109,7 @@ lang: en
       </li>
     </ul>
   </div>
-  <div class="parent portal developers card">
+  <div class="parent portal developers card card-small-1 card-medium-2 card-full-3">
     <a class="card header" href="{{ site.baseurl }}/developers">
       <i class="fa fa-code"></i>
       Developers
