Add search box in 404 page

--- a/404.html
+++ b/404.html
@@ -5,3 +5,7 @@ permalink: 404.html
 ---
 
 <p class="lead">Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. <a href="{{ site.baseurl }}/">Head back home</a> to try finding it again.</p>
+
+<p>Or:</p>
+
+<div class="inline-search-box"><gcse:search></gcse:search></div>
