--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ lang: en
 ---
 
 <p>This documentation portal attempts to catalogue every important tidbit of information about Discourse that can stand the test of time. We've categorised the overarching categories of interest for your reading pleasure.</p>
-<p>Tip: Want to comment on an article? Maybe suggest an edit? By all means! Just follow the "Source link up top.
+<p class="text-tip">Tip: Want to comment on an article? Maybe suggest an edit? By all means! Just follow the "Source" link in the bottom.
 
 <div class="portal list">
   <div class="parent portal users card card-small-1 card-medium-2 card-full-3">
