Big content update
- Several updated docs
- Omitted outdated docs
- Updated index.html with proper URLs

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ lang: en
       </li>
     </ul>
   </div>
-
+<!--
   <div class="parent portal moderators card card-small-1 card-medium-2 card-full-3">
     <a class="card header" href="{{ site.baseurl }}/moderators">
       <i class="fa fa-shield"></i>
@@ -49,6 +49,7 @@ lang: en
       </li>
     </ul>
   </div>
+-->
   <div class="parent portal administrators card card-small-1 card-medium-2 card-full-3">
     <a class="card header" href="{{ site.baseurl }}/administrators">
       <i class="fa fa-trophy"></i>
@@ -79,13 +80,10 @@ lang: en
     </div>
     <ul class="card actions">
       <li class="card action">
-        <a href="{{ site.baseurl }}/TBD"><i class="fa fa-file-o"></i>Adding a menu item to the hamburger menu</a>
+        <a href="{{ site.baseurl }}/custom-header-with-dropdown-navigation"><i class="fa fa-file-o"></i>Custom header with drop-down navigation/a>
       </li>
       <li class="card action">
         <a href="{{ site.baseurl }}/custom-nav-header-like-discourseorg"><i class="fa fa-file-o"></i>Custom nav header like on Discourse.org</a>
-      </li>
-      <li class="card action">
-        <a href="{{ site.baseurl }}/TBD"><i class="fa fa-file-o"></i>Customising the topics index</a>
       </li>
     </ul>
   </div>
@@ -119,13 +117,13 @@ lang: en
     </div>
     <ul class="card actions">
       <li class="card action">
-        <a href="{{ site.baseurl }}/a-simple-discourse-plugin"><i class="fa fa-file-o"></i>A Simple Discourse Plugin</a>
+        <a href="{{ site.baseurl }}/beginners-guide-to-creating-discourse-plugins"><i class="fa fa-file-o"></i>Beginners guide to creating Discourse plugins</a>
       </li>
       <li class="card action">
         <a href="{{ site.baseurl }}/using-discourse-api"><i class="fa fa-file-o"></i>Using Discourse API</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/discourse-developer-install-guide-vagrant"><i class="fa fa-file-o"></i>Discourse Developer Install Guide</a>
+        <a href="{{ site.baseurl }}/official-single-sign-on-for-discourse"><i class="fa fa-file-o"></i>Official single sign-on for Discourse</a>
       </li>
     </ul>
   </div>
