--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@ lang: en
     </div>
     <ul class="card actions">
       <li class="card action">
-        <a href="{{ site.baseurl }}/trust-levels"><i class="fa fa-file-o"></i>Trust Levels</a>
+        <a href="{{ site.baseurl }}/what-do-user-trust-levels-do"><i class="fa fa-file-o"></i>Trust Levels</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/badges"><i class="fa fa-file-o"></i>Badges</a>
+        <a href="{{ site.baseurl }}/what-are-badges"><i class="fa fa-file-o"></i>Badges</a>
       </li>
       <li class="card action">
-        <a href="{{ site.baseurl }}/linked-posts"><i class="fa fa-file-o"></i>Linked Posts</a>
+        <a href="{{ site.baseurl }}/how-to-create-a-poll"><i class="fa fa-file-o"></i>Polls</a>
       </li>
     </ul>
   </div>
