fixed angle bracket

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ lang: en
     </div>
     <ul class="card actions">
       <li class="card action">
-        <a href="{{ site.baseurl }}/custom-header-with-dropdown-navigation"><i class="fa fa-file-o"></i>Custom header with drop-down navigation/a>
+        <a href="{{ site.baseurl }}/custom-header-with-dropdown-navigation"><i class="fa fa-file-o"></i>Custom header with drop-down navigation</a>
       </li>
       <li class="card action">
         <a href="{{ site.baseurl }}/custom-nav-header-like-discourseorg"><i class="fa fa-file-o"></i>Custom nav header like on Discourse.org</a>
