--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ section: home
 lang: en
 ---
 
+<p><strong>IMPORTANT NOTE:</strong> The pages on this site are outdated. For up to date content please go to <a href="https://meta.discourse.org/">meta.discourse.org</a>. Learndiscourse was an experiment which has come to an end. We will use what we learned from it to create a new and improved documentation exeprience on Discourse.org.</p>
 <p>This documentation portal attempts to catalogue every important tidbit of information about Discourse that can stand the test of time. We've categorised the overarching categories of interest for your reading pleasure.</p>
 <p class="text-tip">Tip: Want to comment on an article? Maybe suggest an edit? By all means! Just follow the "Source" link in the bottom.
 
